@@ -1,3 +1,9 @@
+2002-10-22    <smulloni@smullbola.smullyan.org>
+
+	* pylibs/vfs/ftpfs.py: fixes to metaclass.  Doesn't work well
+	anyway, on my installation; for me, ftplib segfaults, which is
+	quite nasty.
+
 2002-10-21  Jacob Smullyan  <smulloni@smullyan.org>
 
 	* pylibs/vfs/ftpfs.py (FTPFile.__new__): fatal typo in metaclass.
